// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render ExpensesSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    56
     expense
    s
     totalling 
    $2,300.05
  </h1>
</div>
`;
